==> energietransitie/twomes-opentherm-monitor-firmware/lib/opentherm/opentherm.cpp <==
#include "opentherm.h"
#include "esp_task_wdt.h"

void OpenTherm::begin(void (*handleInterruptCallback)(void *), void (*processResponseCallback)(unsigned long, OpenThermResponseStatus))
{
	if (handleInterruptCallback != NULL)
	{
		this->handleInterruptCallback = handleInterruptCallback;
		//TODO: attach interrupt handler ESP-IDF style
		// Arduino code to attach interrupt
		// attachInterrupt(digitalPinToInterrupt(inPin), handleInterruptCallback, CHANGE);

		//ESP_IDF_CODE
    	gpio_install_isr_service(0);
		gpio_isr_handler_add((gpio_num_t)inPin, opentherm_gpio_isr_handler, (void*)inPin);

	}
	status = OpenThermStatus::READY;
	this->processResponseCallback = processResponseCallback;
}

void OpenTherm::begin(void (*handleInterruptCallback)(void *))
{
	begin(handleInterruptCallback, NULL);
}

int ICACHE_RAM_ATTR OpenTherm::readState()
{
	return gpio_get_level((gpio_num_t)inPin);
}

void OpenTherm::setActiveState()
{
	esp_err_t err = gpio_set_level((gpio_num_t)outPin, 0);
	if(err != ESP_OK){
		ESP_LOGE("OpenTherm", "Error gpio: %s", esp_err_to_name(err));
	}
	// digitalWrite(outPin, LOW);
}

void OpenTherm::setIdleState()
{
	esp_err_t err = gpio_set_level((gpio_num_t)outPin, 1);
	if(err != ESP_OK){
		ESP_LOGE("OpenTherm", "Error gpio: %s", esp_err_to_name(err));
	}
	// digitalWrite(outPin, HIGH);
}

void OpenTherm::sendBit(bool high)
{
	if (high)
		setActiveState();
	else
		setIdleState();
	ets_delay_us(500);
	if (high)
		setIdleState();
	else
		setActiveState();
	ets_delay_us(500);
}

bool OpenTherm::sendRequestAync(unsigned long request)
{
	//Serial.println("Request: " + String(request, HEX));
	// noInterrupts();
	gpio_intr_disable((gpio_num_t)inPin);
	const bool ready = isReady();
	// interrupts();
	gpio_intr_enable((gpio_num_t)inPin);
	if (!ready)
		return false;

	status = OpenThermStatus::REQUEST_SENDING;
	response = 0;
	responseStatus = OpenThermResponseStatus::NONE;

	uint64_t request_bytes = (1LLU << request);
	sendBit(1); //start bit
	uint64_t bitCount = (1U<<1);
	for (int i = 31; i >= 0; i--)
	{
		bool read_bit = (bool)(request_bytes & bitCount); 
		sendBit(read_bit);
		bitCount*=2;
	}
	sendBit(1); //stop bit
	setIdleState();

	status = OpenThermStatus::RESPONSE_WAITING;
	responseTimestamp = esp_timer_get_time();
	return true;
}

bool OpenTherm::sendResponse(unsigned long request)
{
	status = OpenThermStatus::REQUEST_SENDING;
	response = 0;
	responseStatus = OpenThermResponseStatus::NONE;

	uint64_t request_bytes = (1LLU << request);
	sendBit(1); //start bit
	uint64_t bitCount = (1U<<1);
	for (int i = 31; i >= 0; i--)
	{
		bool read_bit = (bool)(request_bytes & bitCount); 
		sendBit(read_bit);
		bitCount*=2;
	}
	setIdleState();
	status = OpenThermStatus::READY;
	return true;
}

void ICACHE_RAM_ATTR OpenTherm::handleInterrupt(void *)
{
	esp_task_wdt_reset();
	if (isReady())
	{
		if (isSlave && readState() == 1)
		{
			status = OpenThermStatus::RESPONSE_WAITING;
		}
		else
		{
			return;
		}
	}

	unsigned long newTs = esp_timer_get_time();
	if (status == OpenThermStatus::RESPONSE_WAITING)
	{
		if (readState() == 1)
		{
			status = OpenThermStatus::RESPONSE_START_BIT;
		}
		else
		{
			status = OpenThermStatus::RESPONSE_INVALID;
			responseTimestamp = newTs;
		}
	}
	else if (status == OpenThermStatus::RESPONSE_START_BIT)
	{
		ESP_LOGI("OpenTherm", "Diff: %lu", newTs - responseTimestamp);
		if ((newTs - responseTimestamp < 750) && readState() == 0)
		{
			status = OpenThermStatus::RESPONSE_RECEIVING;
			responseTimestamp = newTs;
			responseBitIndex = 0;
		}
		else
		{
			status = OpenThermStatus::RESPONSE_INVALID;
			responseTimestamp = newTs;
		}
	}
	else if (status == OpenThermStatus::RESPONSE_RECEIVING)
	{
		if ((newTs - responseTimestamp) > 750)
		{
			if (responseBitIndex < 32)
			{
				response = (response << 1) | !readState();
				responseTimestamp = newTs;
				responseBitIndex++;
			}
			else
			{ //stop bit
				status = OpenThermStatus::RESPONSE_READY;
				responseTimestamp = newTs;
			}
		}
	}
	return;
}

void OpenTherm::end()
{
	if (this->handleInterruptCallback != NULL)
	{
		gpio_isr_handler_remove((gpio_num_t)inPin);
		gpio_intr_disable((gpio_num_t)inPin);
		// detachInterrupt(digitalPinToInterrupt(inPin));
	}
}
